tests/NormalTests/paczka1/small_fuzzy/62557769.err
Error in line 2: 4kX9kSMSi A498 19,6
Error in line 4: 4kX9kSMSi A174 97,4
Error in line 8: Sag3Fi S762 166,4
Error in line 13: DPV S137 25,9
